logo hyperlink update.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <nav class="{% if $page.title == 'Starkos - Services' %} services_nav{% endif %} {% if $page.title == 'Estimate' %} nav_with_black_color bg-white {% endif %} navbar navbar-dark navbar-expand-lg fixed-top navbar navbar-transparent navbar-expand-lg fixed-top bg-transparent" id="mainNav">
     <div class="container-fluid">
-      <a class="navbar-brand" href="https://incodeks.com/">
+      <a class="navbar-brand" href="https://starkos-com.github.io/starkos-com">
       <img src="{{ site.baseurl }}/assets/img/logo-no-text.png" style="width: 150px;">
     </a>
       <button class="navbar-toggler navbar-toggler-right bg-transparent" id="menu_burger">
